test/deca/context/valid/decl_method_class_return.deca
class A {
    A constructor() {
        return new A();
    }
}