test/deca/context/invalid/decl_method_false_return.deca
class A {
    B errorMethod() {
        return new B();
    }
}